--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,22 @@ body,
 #root {
   height: 100vh;
 }
+
+.list-wrap {
+  padding: 10px 16px;
+}
+
+.list-wrap > header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 70px;
+  
+}
+
+.list-wrap .list-wrap-column-actions {
+  display: flex;
+  gap: 10px;
+
+}
