--- a/src/pages/Posts/post.scss
+++ b/src/pages/Posts/post.scss
@@ -1,6 +1,6 @@
 .post-wrap {
-    margin: 16px;
-    padding: 10px;
-    border-radius: 4px;
-    background-color: #fff;
+  .post-content {
+    margin-bottom: 20px;
+    min-height: 500px;
+  }
 }
