--- a/src/pages/Posts/Comments/index.scss
+++ b/src/pages/Posts/Comments/index.scss
@@ -1,5 +1,3 @@
-$bg: rgba(127, 127, 127, 0.1);
-
 .comments-list {
   margin: 16px;
   border-radius: 4px;
@@ -12,7 +10,7 @@ $bg: rgba(127, 127, 127, 0.1);
   & > main {
     padding: 0 16px;
     .comment-item {
-      background: $bg;
+      background: #f6f7f6;
       min-height: 100px;
       padding: 10px;
       border-bottom: 1px solid rgba(127, 127, 127, 0.1);
@@ -25,5 +23,12 @@ $bg: rgba(127, 127, 127, 0.1);
   }
   & > footer {
     padding: 16px;
+  }
+  .replies {
+    .reply-item {
+      padding: 10px 6px;
+      background-color: #eeeeee;
+      border-radius: 4px;
+    }
   }
 }
