--- a/src/pages/Posts/post.scss
+++ b/src/pages/Posts/post.scss
@@ -2,5 +2,19 @@
   .post-content {
     margin-bottom: 20px;
     min-height: 500px;
+    padding: 14px;
+
+    & > h1 {
+      margin-bottom: 0;
+    }
+    .post-detail {
+      color: #999;
+      font-size: 12px;
+      margin-top: 8px;
+      margin-bottom: 10px;
+      display: flex;
+      gap: 10px;
+      align-items: center;
+    }
   }
 }
