--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,10 @@ body,
   border-radius: 4px;
   background-color: #fff;
 }
+
+.icon {
+  width: 1em; height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
+}
