--- a/src/pages/Posts/Comments/comment.scss
+++ b/src/pages/Posts/Comments/comment.scss
@@ -8,11 +8,12 @@
   .right-area {
     flex: 1;
     header {
-      font-size: 14px;
+      font-size: 15px;
       font-weight: bold;
+      color: #777;
       & > span {
         margin-left: 10px;
-        color: #999;
+        color: #aaa;
         font-size: 12px;
       }
     }
