--- a/src/pages/Posts/post.scss
+++ b/src/pages/Posts/post.scss
@@ -3,6 +3,8 @@
     margin-bottom: 20px;
     min-height: 500px;
     padding: 14px;
+    padding-bottom: 46px;
+    position: relative;
 
     & > h1 {
       margin-bottom: 0;
@@ -11,10 +13,16 @@
       color: #999;
       font-size: 12px;
       margin-top: 8px;
-      margin-bottom: 10px;
+      margin-bottom: 18px;
       display: flex;
       gap: 10px;
       align-items: center;
+    }
+
+    .post-tags {
+      position: absolute;
+      bottom: 14px;
+
     }
   }
 }
