--- a/src/pages/Login/index.scss
+++ b/src/pages/Login/index.scss
@@ -1,5 +1,5 @@
 .login-wrap {
-    height: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,9 +10,28 @@
     // border: 1px solid #eee;
     box-shadow: 1px 1px 10px #ccc;
     & > h2 {
-        text-align: center;
-        padding: 4px 0;
+      text-align: center;
+      padding: 4px 0;
+    }
+  }
+}
 
+.auth-provider {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 14px;
+  cursor: pointer;
+
+  .icon-image {
+    font-size: 30px;
+  }
+  .icon-text {
+    color: #777;
+  }
+  &:hover {
+    .icon-text {
+      color: #999;
     }
   }
 }
