--- a/src/Components/Categories/index.scss
+++ b/src/Components/Categories/index.scss
@@ -1,13 +1,43 @@
 .categories {
-  height: 26px;
+  height: 30px;
   border-top: 1px solid rgba(255, 255, 255, 0.25);
   background-color: #e8e8ea;
   border-bottom: 1px solid rgba(0, 0, 0, 0.125);
   box-sizing: border-box;
   color: #666;
+  padding: 0 32px;
 
   display: flex;
   flex-wrap: nowrap;
+  gap: 20px;
   align-items: center;
   padding: 0 10px;
+
+  &-label {
+    font-size: 14px;
+    font-weight: 600;
+  }
+
+  .category-item {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    .ant-tag {
+      margin-right: 0 !important;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+    }
+    .count {
+      width: fit-content;
+      height: 22px;
+      padding: 0 8px;
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      border-top-right-radius: 4px;
+      border-bottom-right-radius: 4px;
+      color: #fff;
+      background-color: #3e7aab;
+    }
+  }
 }
