--- a/src/Components/Categories/index.scss
+++ b/src/Components/Categories/index.scss
@@ -22,6 +22,7 @@
     display: flex;
     align-items: center;
     cursor: pointer;
+    position: relative;
     .ant-tag {
       margin-right: 0 !important;
       border-top-right-radius: 0;
