--- a/src/Components/TagsSelector/index.scss
+++ b/src/Components/TagsSelector/index.scss
@@ -2,27 +2,16 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 6px;
+  gap: 12px;
   .tag-item {
     cursor: pointer;
     position: relative;
-    .select-icon {
-      position: absolute;
-      z-index: 100;
-      top: -6px;
-      right: 2px;
-      border-radius: 50%;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      color: #fff;
-      background-color: #49d249;
+
+    .ant-tag,
+    .ant-tag-custom {
+      margin-right: 0;
     }
   }
-}
-.select-icon {
-  width: 14px;
-  height: 14px;
 }
 
 .color-picker {
