--- a/src/Components/PostsNav/index.scss
+++ b/src/Components/PostsNav/index.scss
@@ -3,6 +3,11 @@
   justify-content: center;
   align-items: center;
 }
+@mixin truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .posts {
   & > header {
     background-color: #aaa;
@@ -24,6 +29,9 @@
   .ant-collapse-header {
     padding: 2px 6px !important;
     background-color: #e8e8ea;
+    .ant-collapse-header-text {
+      font-weight: 600;
+    }
   }
   .ant-collapse-content {
     .ant-collapse-content-box {
@@ -39,7 +47,6 @@
   height: 1px;
   background: rgba(255, 255, 255, 0.15);
   border-top: 1px solid rgba(127, 127, 127, 0.33);
-  padding: 6px 0;
   position: relative;
   cursor: pointer;
 
@@ -51,7 +58,7 @@
   }
 
   &-read-status {
-    width: 20px;
+    width: 30px;
     @include center;
   }
   & > main {
@@ -59,15 +66,21 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    .title-main {
+    padding-top: 6px;
+    .post-item-title {
       display: flex;
       flex-direction: row;
       align-items: center;
       gap: 10px;
-      .text {
-        color: #333;
-        font-size: 14px;
-        font-weight: bold;
+      .title-text {
+        width: 82%;
+        @include truncate;
+
+        .text {
+          color: #333;
+          font-size: 15px;
+          font-weight: 600;
+        }
       }
     }
     .summary {
@@ -75,12 +88,22 @@
     }
   }
   &-actions {
-    width: 20px;
+    width: 40px;
+    transform: translate(7px, 5px);
     @include center;
   }
   .createtime {
     position: absolute;
-    top: 6px;
-    right: 0;
+    top: 10px;
+    right: 6px;
+    color: #777;
+    font-size: 12px;
   }
+}
+
+.dot {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #3e7aab;
 }
