--- a/src/pages/Login/index.scss
+++ b/src/pages/Login/index.scss
@@ -9,9 +9,12 @@
     border-radius: 4px;
     // border: 1px solid #eee;
     box-shadow: 1px 1px 10px #ccc;
-    & > h2 {
-      text-align: center;
-      padding: 4px 0;
+    & > header {
+      font-size: 18px;
+      color: #262626;
+      height: 30px;
+      line-height: 30px;
+      margin-bottom: 12px;
     }
   }
 }
