--- a/src/Components/PostsNav/index.scss
+++ b/src/Components/PostsNav/index.scss
@@ -43,7 +43,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  min-height: 70px;
+  min-height: 80px;
   height: 1px;
   background: rgba(255, 255, 255, 0.15);
   border-top: 1px solid rgba(127, 127, 127, 0.33);
@@ -85,6 +85,7 @@
     }
     .summary {
       color: #666;
+      margin-bottom: 0;
     }
   }
   &-actions {
@@ -106,4 +107,12 @@
   height: 10px;
   border-radius: 50%;
   background-color: #3e7aab;
+}
+
+.posts-empty {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
