--- a/src/Components/PostsNav/index.scss
+++ b/src/Components/PostsNav/index.scss
@@ -59,11 +59,12 @@
 
   &-read-status {
     width: 30px;
+    height: 100%;
     @include center;
   }
   & > main {
     height: 100%;
-    flex: 1;
+    width: calc(100% - 30px - 40px);
     display: flex;
     flex-direction: column;
     padding-top: 6px;
@@ -71,6 +72,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+      width: 100%;
       gap: 10px;
       .title-text {
         width: 82%;
@@ -89,8 +91,9 @@
     }
   }
   &-actions {
+    height: 100%;
     width: 40px;
-    transform: translate(7px, 5px);
+    // transform: translate(7px, 5px);
     @include center;
   }
   .createtime {
