--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,8 @@ body,
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  height: 70px;
+  height: 50px;
+  margin-bottom: 10px;
 }
 
 .list-wrap .list-wrap-column-actions {
