--- a/src/pages/Forbidden/index.scss
+++ b/src/pages/Forbidden/index.scss
@@ -1,8 +1,14 @@
 .forbidden {
   height: 100%;
   display: flex;
+  flex-direction: column;
+  gap: 10px;
   justify-content: center;
   align-items: center;
   color: #9a9a9a;
   font-size: 16px;
+  a {
+    margin: 0 4px;
+    text-decoration: none;
+  }
 }
