--- a/src/Components/Categories/index.scss
+++ b/src/Components/Categories/index.scss
@@ -1,4 +1,5 @@
 .categories {
+  position: relative;
   height: 30px;
   border-top: 1px solid rgba(255, 255, 255, 0.25);
   background-color: #e8e8ea;
@@ -17,6 +18,10 @@
   &-label {
     font-size: 14px;
     font-weight: 600;
+    display: inline-block;
+    width: 50px;
+    letter-spacing: 3px;
+    text-align: right;
   }
 
   .category-item {
@@ -29,17 +34,57 @@
       border-top-right-radius: 0;
       border-bottom-right-radius: 0;
     }
-    .count {
-      width: fit-content;
-      height: 22px;
-      padding: 0 8px;
-      display: inline-flex;
-      justify-content: center;
-      align-items: center;
-      border-top-right-radius: 4px;
-      border-bottom-right-radius: 4px;
-      color: #fff;
-      background-color: #3e7aab;
+  }
+
+  .more-tags-icon {
+    position: absolute;
+    right: 14px;
+  }
+}
+
+.count {
+  width: fit-content;
+  font-size: 12px;
+  height: 22px;
+  padding: 0 6px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  color: #fff;
+  background-color: #3e7aab;
+}
+
+.more-tags {
+  max-height: 600px;
+  overflow: auto;
+  background-color: #e8e8ea;
+  color: #666;
+  padding: 4px;
+  border-radius: 6px;
+  .tag-item {
+    padding: 5px 12px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 4px;
+    cursor: pointer;
+    &:hover {
+      background: #fff;
     }
+  }
+  .spot {
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    margin-right: 4px;
+  }
+  .count {
+    margin-left: 10px;
+    border-radius: 4px;
+    height: 20px;
   }
 }
