--- a/src/Components/PostsNav/index.scss
+++ b/src/Components/PostsNav/index.scss
@@ -50,6 +50,9 @@
   position: relative;
   cursor: pointer;
 
+  &-active {
+    background-color: #f2f6f0b0;
+  }
   &-unread {
     background: rgba(243, 120, 103, 0.2);
   }
